--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.25.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-gauge-component": "^1.2.64",
     "react-scripts": "5.0.1",
     "tailwindcss": "3.4.17",
     "web-vitals": "^2.1.4"
